Add functionality to delete TodoItem
- TodoList component now generates a deleteTodo function
  that is passed to each TodoItem as a prop
- TodoItem component now includes a cross image that will
  remove the item from the TodoList's state

--- a/src/stylesheets/TodoItem.scss
+++ b/src/stylesheets/TodoItem.scss
@@ -20,3 +20,11 @@
 .todo-item__name {
   margin-left: 5px;
 }
+
+.todo-item__delete {
+  margin-left: 8px;
+}
+
+.todo-item__delete:hover {
+  cursor: pointer;
+}
