--- a/src/stylesheets/TodoList.scss
+++ b/src/stylesheets/TodoList.scss
@@ -1,3 +1,8 @@
+.todo-list {
+  border-bottom: 1px solid #cccccc;
+  margin-bottom: 1rem;
+}
+
 .item-container {
   border: 1px solid #cccccc;
   border-radius: 1rem;
